// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: .56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c12:hover {
  opacity: 1;
}

.c12:active {
  opacity: .24;
}

.c12 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12:hover,
.c12:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first application to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Application Access provides secure access to internal applications.
          </div>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11"
            kind="primary"
            width="224px"
          >
            Add 
            application
          </button>
          <a
            class="c12"
            href="https://goteleport.com/docs/application-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Application
      </button>
    </div>
    <div
      class="c4"
      kind="danger"
    >
      some error message
       
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c18:active {
  opacity: 0.24;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c14 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c19 {
  display: inline-block;
  transition: color .3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c17 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
}

.c6 {
  box-sizing: border-box;
  display: flex;
}

.c7 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c22 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c23 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c20 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #e64a19;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c15 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c12 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c12 > thead > tr > th,
.c12 > tbody > tr > th,
.c12 > tfoot > tr > th,
.c12 > thead > tr > td,
.c12 > tbody > tr > td,
.c12 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c12 > thead > tr > th:first-child,
.c12 > tbody > tr > th:first-child,
.c12 > tfoot > tr > th:first-child,
.c12 > thead > tr > td:first-child,
.c12 > tbody > tr > td:first-child,
.c12 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c12 > thead > tr > th:last-child,
.c12 > tbody > tr > th:last-child,
.c12 > tfoot > tr > th:last-child,
.c12 > thead > tr > td:last-child,
.c12 > tbody > tr > td:last-child,
.c12 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c12 > tbody > tr > td {
  vertical-align: baseline;
}

.c12 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c12 > thead > tr > th .c10 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c12 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c12 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c12 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c12 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c12 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c9 {
  background: none;
  border: none;
  cursor: pointer;
}

.c9 .c10 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c9:hover .c10,
.c9:focus .c10 {
  opacity: 1;
}

.c9:disabled {
  cursor: default;
}

.c9:disabled .c10 {
  opacity: 0.1;
}

.c5 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c5:hover,
.c5:focus,
.c5:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c5::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c13 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add Application
      </button>
    </div>
    <nav
      class="c4"
    >
      <input
        class="c5"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              4
            </strong>
             of
             
            <strong>
              4
            </strong>
          </div>
        </div>
        <div
          class="c6"
        >
          <button
            class="c9"
            disabled=""
            title="Previous page"
          >
            <span
              class="c10 c11 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            class="c9"
            disabled=""
            title="Next page"
          >
            <span
              class="c10 c11 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c12 c13"
    >
      <thead>
        <tr>
          <th />
          <th>
            <a>
              Name
              <span
                class="c10 c14 icon icon-chevron-up "
                color="light"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c10 c14 icon icon-chevrons-expand-vertical "
                color="light"
              />
            </a>
          </th>
          <th>
            <a>
              Address
              <span
                class="c10 c14 icon icon-chevrons-expand-vertical "
                color="light"
              />
            </a>
          </th>
          <th>
            Labels
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c15"
              height="32px"
              width="32px"
            >
              <span
                class="c10 c16 icon icon-amazonaws "
                color="light"
                font-size="6"
              />
            </div>
          </td>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://
            awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c17"
              kind="secondary"
            >
              aws_account_id: A1234
            </div>
            <div
              class="c17"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c17"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c18"
              kind="border"
              width="88px"
            >
              LAUNCH
              <span
                class="c10 c19 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c20"
              height="32px"
              width="32px"
            >
              <div
                class="c21"
                font-size="3"
              >
                G
              </div>
            </div>
          </td>
          <td>
            Grafana
          </td>
          <td>
            This is a Grafana app
          </td>
          <td>
            https://
            grafana.teleport-proxy.com
          </td>
          <td>
            <div
              class="c17"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c17"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c18"
              href="/web/launch/grafana.one/one/grafana.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c22"
              height="32px"
              width="32px"
            >
              <div
                class="c21"
                font-size="3"
              >
                J
              </div>
            </div>
          </td>
          <td>
            Jenkins
          </td>
          <td>
            This is a Jenkins app
          </td>
          <td>
            https://
            jenkins.teleport-proxy.com
          </td>
          <td>
            <div
              class="c17"
              kind="secondary"
            >
              env: prod
            </div>
            <div
              class="c17"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c18"
              href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c23"
              height="32px"
              width="32px"
            >
              <div
                class="c21"
                font-size="3"
              >
                M
              </div>
            </div>
          </td>
          <td>
            Mattermost1
          </td>
          <td>
            This is a Mattermost app
          </td>
          <td>
            https://
            mattermost.teleport-proxy.com
          </td>
          <td>
            <div
              class="c17"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c17"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c18"
              href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      color="text.primary"
    >
      <div
        class="c4"
      >
        No Applications Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        applications
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
